--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <lombok.version>1.18.28</lombok.version>
-        <neo4j.version>7.1.0</neo4j.version>
         <spring.version>3.1.0</spring.version>
         <slf4j-api.version>2.0.7</slf4j-api.version>
         <graphql.validation.version>20.0</graphql.validation.version>
@@ -33,9 +32,9 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-neo4j</artifactId>
-            <version>${neo4j.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-neo4j</artifactId>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>com.graphql-java</groupId>
