--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <maven.surefire.plugin.version>3.1.0</maven.surefire.plugin.version>
         <junit.version>5.9.3</junit.version>
         <jacoco.version>0.8.10</jacoco.version>
+        <maven-failsafe.version>3.1.2</maven-failsafe.version>
     </properties>
 
     <dependencies>
@@ -179,6 +180,22 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven-failsafe.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
