--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <junit.version>5.9.3</junit.version>
         <jacoco.version>0.8.10</jacoco.version>
         <maven-failsafe.version>3.1.2</maven-failsafe.version>
+        <graphql-test.version>1.2.1</graphql-test.version>
     </properties>
 
     <dependencies>
@@ -85,6 +86,12 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>neo4j</artifactId>
             <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.graphql</groupId>
+            <artifactId>spring-graphql-test</artifactId>
+            <version>${graphql-test.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
